[project]
name = "memebot"
version = "0.0.0"
requires-python = ">=3.14"
dependencies = [
  "discord.py==2.7.1",
  "emoji==2.15.0",
  "pymongo==4.16.0",
  "requests==2.33.1",
]

[dependency-groups]
dev = [
  "black==26.3.1",
  "mypy==1.20.1",
  "pytest==9.0.3",
  "pytest-asyncio==1.3.0",
  "pytest-mock==3.15.1",
  "types-emoji==2.1.0.3",
]

[tool.setuptools]
packages = ["memebot"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
follow_imports_for_stubs = true
namespace_packages = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
pretty = true
exclude = [
  "data",
  "venv",
  "tests",
]

[[tool.mypy.overrides]]
module = [
  # This module in discord.py does not have full stubs for some reason
  "discord.ext.commands",
]
ignore_missing_imports = true

[tool.pytest]
testpaths = ["tests"]

[tool.uv]
package = false
