[project]
name = "memebot"
version = "0.0.0"
requires-python = ">=3.14"
dependencies = [
  "discord.py==2.7.1",
  "pymongo==4.16.0",
  "requests==2.33.1",
]

[dependency-groups]
dev = [
  "mypy==1.20.1",
  "pytest==9.0.3",
  "pytest-asyncio==1.3.0",
  "pytest-mock==3.15.1",
  "ruff==0.15.11",
]

[tool.setuptools]
packages = ["memebot"]

[tool.ruff.lint]
select = [
  # Ruff
  "RUF",
  # flake8
  "F",
  # Errors
  "E",
  # Warnings
  "W",
  # flake8-annotations
  "ANN",
  # flake8-bugbear
  "B",
  # flake8-builtins
  "A",
  # flake8-comprehensions
  "C4",
  # flake8-implicit-str-concat
  "ISC",
  # flake8-print
  "T20",
  # flake8-pytest-style
  "PT",
  # flake8-return
  "RET",
  # flake8-unused-arguments
  "ARG",
  # isort
  "I",
  # pep8-naming
  "N",
  # flake8-simplify
  "SIM",
  # pyupgrade
  "UP",
]
ignore = [
  # line-length, handled by formatter
  "E501",
]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
follow_imports_for_stubs = true
namespace_packages = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
pretty = true
exclude = [
  "data",
  "venv",
  "tests",
]

[[tool.mypy.overrides]]
module = [
  # This module in discord.py does not have full stubs for some reason
  "discord.ext.commands",
]
ignore_missing_imports = true

[tool.pytest]
testpaths = ["tests"]

[tool.uv]
package = false
